--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,29 +1,55 @@
-:root {
-    font-size: 60%;
+.container {
+    display: grid;
+
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    grid-template-areas: 
+    "number-7 number-8 number-9"
+    "number-4 number-5 number-6"
+    "number-1 number-2 number-3"
+    "number-0 number-0 number-0";
+
+    background: #2980b9;
+    border-radius: 4px;
 }
 
-* {
-    margin: 0;
-    padding: 0;
+#number-0 {
+   grid-area: number-0; 
 }
 
-html, body, #root {
-    height: 100vh;
-}
+#number-1 {
+    grid-area: number-1; 
+ }
 
-#root {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+ #number-2 {
+    grid-area: number-2; 
+ }
 
-body, input, button {
-    font: 400 1.6rem Poppins;
-}
+ #number-3 {
+    grid-area: number-3; 
+ }
 
-@media (min-width:700px) {
-    :root {
-        font-size: 62.5%;
-    }
-}
+ #number-4 {
+    grid-area: number-4; 
+ }
 
+ #number-5 {
+    grid-area: number-5; 
+ }
+
+ #number-6 {
+    grid-area: number-6; 
+ }
+
+#number-7 {
+    grid-area: number-7; 
+ }
+
+#number-8 {
+    grid-area: number-8; 
+ }
+
+#number-9 {
+    grid-area: number-9; 
+ }
